finish with b-pic

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <main>
     <section class="background__pic">
       <div class="buttons">
-        <button class="btn__One">Online Challanges</button>
-        <button class="btn__Two">On-site Challanges</button>
+        <button class="btn btn__one">Online Challanges</button>
+        <button class="btn btn__two">On-site Challanges</button>
       </div>
     </section>
 
