--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="user__place">
             <img class="user__pic" src="image 3.png" alt="User pic">
           </div>
-          <div class="description">
+          <div class="quote">
             <blockquote class="review__text">
               This is a quote about how amazing this place is and how much fun me and my friends had when we tried it
             </blockquote>
@@ -103,7 +103,7 @@
                 Nemo nocere tibi erit, et non inimicos, et
               </p>
               <div class="box__button">
-                <button>Book this room</button>
+                <button class="book__button">Book this room</button>
               </div>
             </div>
           </article>
@@ -128,7 +128,7 @@
                 Nemo nocere tibi erit, et non inimicos, et
               </p>
               <div class="box__button">
-                <button>Book this room</button>
+                <button class="book__button">Book this room</button>
               </div>
             </div>
           </article>
@@ -153,7 +153,7 @@
                 Nemo nocere tibi erit, et non inimicos, et
               </p>
               <div class="box__button">
-                <button>Book this room</button>
+                <button class="book__button">Book this room</button>
               </div>
             </div>
           </article>
