--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </section>
 
     <section class="blocks">
-      <div class="block__mar">
+      
         <div class="block__content">
           <figure class="block__one"></figure>
           <article class="block__two">
@@ -206,7 +206,7 @@
           </article>
           <figure class="block__four"></figure>
         </div>
-      </div>
+      
     </section>
   </main>
   <footer class="foot">
@@ -225,8 +225,7 @@
             <a href="">The story</a>
             <a href="">Contact us</a>
             <a href="">Legal</a>
-            <br>
-            <a href="">Play online</a>
+            <a class="play__online" href="">Play online</a>
             <a href="">Play on-site</a>
           </ul>
         </div>
