--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset='utf-8'>
@@ -22,15 +22,15 @@
         <span>Escape</span>
         <span>Room</span>
       </h1>
+      <nav class="hamburger__pic"></nav>
     </div>
     <nav class="menu__container">
       <ul class="menu">
-        <ul>
-          <li><a href="">Play online</a></li>
-          <li><a href="">Play on-site</a></li>
-          <li><a href="">The story</a></li>
-          <li><a href="">Conact us</a></li>
-        </ul>
+        <li><a href="">Play online</a></li>
+        <li><a href="">Play on-site</a></li>
+        <li><a href="">The story</a></li>
+        <li><a href="">Conact us</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -172,37 +172,37 @@
     </section>
 
     <section class="blocks">
-        <div class="block__content">
-          <figure class="block__one"></figure>
-          <article class="block__two">
-            <div>
-              <h2>Play with your friends or build your team stronger at work</h2>
-              <br>
-              <p>
-                Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-              </p>
-              <br>
-              <button>Book on-site today</button>
-            </div>
-          </article>
-          <article class="block__three">
-            <div>
-              <h2>
-                Play online or visit our venue for one of our 25 escape rooms
-              </h2>
-              <br>
-              <p>
-                Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-              </p>
-              <br>
-              <button>Book on-site today</button>
-            </div>
-          </article>
-          <figure class="block__four"></figure>
-        </div>
-      </section>
+      <div class="block__content">
+        <figure class="block__one"></figure>
+        <article class="block__two">
+          <div>
+            <h2>Play with your friends or build your team stronger at work</h2>
+            <br>
+            <p>
+              Praeterea, ex culpa non invenies unum aut non accusatis unum.
+              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+            </p>
+            <br>
+            <button>Book on-site today</button>
+          </div>
+        </article>
+        <article class="block__three">
+          <div>
+            <h2>
+              Play online or visit our venue for one of our 25 escape rooms
+            </h2>
+            <br>
+            <p>
+              Praeterea, ex culpa non invenies unum aut non accusatis unum.
+              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+            </p>
+            <br>
+            <button>Book on-site today</button>
+          </div>
+        </article>
+        <figure class="block__four"></figure>
+      </div>
+    </section>
   </main>
 
   <footer class="foot">
