--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         <span>Escape</span>
         <span>Room</span>
       </h1>
-      <nav class="hamburger__pic"></nav>
+      <div class="hamburger__pic"></div>
     </div>
     <nav class="menu__container">
       <ul class="menu">
-        <li><a href="">Play online</a></li>
-        <li><a href="">Play on-site</a></li>
-        <li><a href="">The story</a></li>
-        <li><a href="">Conact us</a></li>
+        <li><a href="#">Play online</a></li>
+        <li><a href="#">Play on-site</a></li>
+        <li><a href="#">The story</a></li>
+        <li><a href="#">Conact us</a></li>
+        <div class="close"></div>
       </ul>
     </nav>
   </header>
@@ -218,19 +219,19 @@
         <div class="site__map">
           <h5>Site map</h5>
           <ul>
-            <a href="">The story</a>
-            <a href="">Contact us</a>
-            <a href="">Legal</a>
-            <a class="play__online" href="">Play online</a>
-            <a href="">Play on-site</a>
+            <a href="#">The story</a>
+            <a href="#">Contact us</a>
+            <a href="#">Legal</a>
+            <a class="play__online" href="#">Play online</a>
+            <a href="#">Play on-site</a>
           </ul>
         </div>
         <div class="social__media">
           <h5>Follow us on</h5>
           <ul>
-            <a href="">Facebook</a>
-            <a href="">Instagram</a>
-            <a href="">Twitter</a>
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
           </ul>
         </div>
       </nav>
