--- a/index.html
+++ b/index.html
@@ -1,242 +1,243 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>[ESC] Escape Hacker Room</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script defer src="main.js"></script>
+  </head>
 
-<head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>[ESC] Escape Hacker Room</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  <script defer src='main.js'></script>
-</head>
-
-<body>
-  <header>
-    <div class="logo__container">
-      <img class="logo" src="Group 1.png" alt="ESC logo">
-      <h1>
-        <span>Hacker</span>
-        <span>Escape</span>
-        <span>Room</span>
-      </h1>
-      <div class="hamburger__pic"></div>
-    </div>
-    <nav class="menu__container">
-      <ul class="menu">
-        <li><a href="#">Play online</a></li>
-        <li><a href="#">Play on-site</a></li>
-        <li><a href="#">The story</a></li>
-        <li><a href="#">Conact us</a></li>
-        <div class="close"></div>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="background__pic">
-      <div class="buttons">
-        <button class="btn btn__one">Online Challanges</button>
-        <button class="btn btn__two">On-site Challanges</button>
+  <body>
+    <header>
+      <div class="logo__container">
+        <img class="logo" src="Group 1.png" alt="ESC logo" />
+        <h1>
+          <span>Hacker</span>
+          <span>Escape</span>
+          <span>Room</span>
+        </h1>
+        <div class="hamburger__pic"></div>
       </div>
-    </section>
-
-    <section class="reviews">
-      <div class="user__content">
-
-        <article class="review review__one">
-          <div class="user__place">
-            <img class="user__pic" src="image 3.png" alt="User pic">
-          </div>
-          <div class="quote">
-            <blockquote class="review__text">
-              This is a quote about how amazing this place is and how much fun me and my friends had when we tried it
-            </blockquote>
-            <p>
-              John Doe, visited us in September
-              <br class="new__row">
-              2021
-            </p>
-          </div>
-        </article>
-
-        <article class="review">
-          <div class="user__place">
-            <img class="user__pic" src="image 3.png" alt="User pic">
-          </div>
-          <div class="description">
-            <blockquote class="review__text">
-              This is a quote about how amazing this place is and how much fun me and my friends had when we tried it
-            </blockquote>
-            <p>
-              John Doe, visited us in September
-              <br class="new__row">
-              2021
-            </p>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section class="popular__challenges">
-      <div class="box__challenges">
-        <h2 class="main__title">Popular challenges right now</h2>
-        <div class="boxes">
-          <article class="box">
-            <img class="box__pic" src="image 3 (1).png" alt="">
-            <div class="box__content">
-              <h3 class="title">Title of room (on-site)</h3>
-              <div class="five__stars">
-                <div class="stars">
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star empty__star"></div>
-                </div>
-                <p>2-6 participants</p>
-              </div>
-              <p class="box__text">
-                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam.
-                Nemo nocere tibi erit, et non inimicos, et
-              </p>
-              <div class="box__button">
-                <button class="book__button">Book this room</button>
-              </div>
-            </div>
-          </article>
-
-          <article class="box">
-            <img class="box__pic" src="image 3 (1).png" alt="">
-            <div class="box__content">
-              <h2 class="title">Title of room (on-site)</h2>
-              <div class="five__stars">
-                <div class="stars">
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star empty__star"></div>
-                </div>
-                <p>2-6 participants</p>
-              </div>
-              <p class="box__text">
-                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam.
-                Nemo nocere tibi erit, et non inimicos, et
-              </p>
-              <div class="box__button">
-                <button class="book__button">Book this room</button>
-              </div>
-            </div>
-          </article>
-
-          <article class="box">
-            <img class="box__pic" src="image 3 (1).png" alt="">
-            <div class="box__content">
-              <h2 class="title">Title of room (on-site)</h2>
-              <div class="five__stars">
-                <div class="stars">
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star full__star"></div>
-                  <div class="star empty__star"></div>
-                </div>
-                <p>2-6 participants</p>
-              </div>
-              <p class="box__text">
-                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam.
-                Nemo nocere tibi erit, et non inimicos, et
-              </p>
-              <div class="box__button">
-                <button class="book__button">Book this room</button>
-              </div>
-            </div>
-          </article>
-        </div>
-        <div class="mid__buttons">
-          <button class="btn__One">Online Challanges</button>
-          <button class="btn__Two">On-site Challanges</button>
-        </div>
-      </div>
-    </section>
-
-    <section class="info">
-      <div class="mid__info">
-        <p>Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant
-          haec quoque vos omnino desit illud quo solo felicitatis libertatisque perficiuntur.
-        </p>
-        <button>Read the full story</button>
-      </div>
-    </section>
-
-    <section class="blocks">
-      <div class="block__content">
-        <figure class="block__one"></figure>
-        <article class="block__two">
-          <div>
-            <h2>Play with your friends or build your team stronger at work</h2>
-            <br>
-            <p>
-              Praeterea, ex culpa non invenies unum aut non accusatis unum.
-              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-            </p>
-            <br>
-            <button>Book on-site today</button>
-          </div>
-        </article>
-        <article class="block__three">
-          <div>
-            <h2>
-              Play online or visit our venue for one of our 25 escape rooms
-            </h2>
-            <br>
-            <p>
-              Praeterea, ex culpa non invenies unum aut non accusatis unum.
-              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-            </p>
-            <br>
-            <button>Book on-site today</button>
-          </div>
-        </article>
-        <figure class="block__four"></figure>
-      </div>
-    </section>
-  </main>
-
-  <footer class="foot">
-    <div class="foot__flex">
-      <section class="footer__text">
-        <h5>[Esc] Hacker Escape Rooms</h5>
-        <p>
-          Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo
-          spectant haec quoque vos omnino desit illud quo solo felicitatis libertatisque perficiuntur.
-        </p>
-      </section>
-      <nav class="links">
-        <div class="site__map">
-          <h5>Site map</h5>
-          <ul>
-            <a href="#">The story</a>
-            <a href="#">Contact us</a>
-            <a href="#">Legal</a>
-            <a class="play__online" href="#">Play online</a>
-            <a href="#">Play on-site</a>
-          </ul>
-        </div>
-        <div class="social__media">
-          <h5>Follow us on</h5>
-          <ul>
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
-          </ul>
-        </div>
+      <nav class="menu__container">
+        <ul class="menu">
+          <li><a href="#">Play online</a></li>
+          <li><a href="#">Play on-site</a></li>
+          <li><a href="#">The story</a></li>
+          <li><a href="#">Conact us</a></li>
+          <div class="close"></div>
+        </ul>
       </nav>
-    </div>
-  </footer>
-</body>
+    </header>
 
+    <main>
+      <section class="background__pic">
+        <div class="buttons">
+          <button class="btn btn__one">Online Challanges</button>
+          <button class="btn btn__two">On-site Challanges</button>
+        </div>
+      </section>
+
+      <section class="reviews">
+        <div class="user__content">
+          <article class="review review__one">
+            <div class="user__place">
+              <img class="user__pic" src="image 3.png" alt="User pic" />
+            </div>
+            <div class="quote">
+              <blockquote class="review__text">
+                This is a quote about how amazing this place is and how much fun me and my friends had when we tried it
+              </blockquote>
+              <p>
+                John Doe, visited us in September
+                <br class="new__row" />
+                2021
+              </p>
+            </div>
+          </article>
+
+          <article class="review">
+            <div class="user__place">
+              <img class="user__pic" src="image 3.png" alt="User pic" />
+            </div>
+            <div class="description">
+              <blockquote class="review__text">
+                This is a quote about how amazing this place is and how much fun me and my friends had when we tried it
+              </blockquote>
+              <p>
+                John Doe, visited us in September
+                <br class="new__row" />
+                2021
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="popular__challenges">
+        <div class="box__challenges">
+          <h2 class="main__title">Popular challenges right now</h2>
+          <div class="boxes">
+            <article class="box">
+              <img class="box__pic" src="image 3 (1).png" alt="" />
+              <div class="box__content">
+                <h3 class="title">Title of room (on-site)</h3>
+                <div class="five__stars">
+                  <div class="stars">
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star empty__star"></div>
+                  </div>
+                  <p>2-6 participants</p>
+                </div>
+                <p class="box__text">
+                  Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                  et non inimicos, et
+                </p>
+                <div class="box__button">
+                  <button class="book__button">Book this room</button>
+                </div>
+              </div>
+            </article>
+
+            <article class="box">
+              <img class="box__pic" src="image 3 (1).png" alt="" />
+              <div class="box__content">
+                <h2 class="title">Title of room (on-site)</h2>
+                <div class="five__stars">
+                  <div class="stars">
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star empty__star"></div>
+                  </div>
+                  <p>2-6 participants</p>
+                </div>
+                <p class="box__text">
+                  Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                  et non inimicos, et
+                </p>
+                <div class="box__button">
+                  <button class="book__button">Book this room</button>
+                </div>
+              </div>
+            </article>
+
+            <article class="box">
+              <img class="box__pic" src="image 3 (1).png" alt="" />
+              <div class="box__content">
+                <h2 class="title">Title of room (on-site)</h2>
+                <div class="five__stars">
+                  <div class="stars">
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star full__star"></div>
+                    <div class="star empty__star"></div>
+                  </div>
+                  <p>2-6 participants</p>
+                </div>
+                <p class="box__text">
+                  Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                  et non inimicos, et
+                </p>
+                <div class="box__button">
+                  <button class="book__button">Book this room</button>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="mid__buttons">
+            <button class="btn__One">Online Challanges</button>
+            <button class="btn__Two">On-site Challanges</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="info">
+        <div class="mid__info">
+          <p>
+            Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant haec quoque vos
+            omnino desit illud quo solo felicitatis libertatisque perficiuntur.
+          </p>
+          <button>Read the full story</button>
+        </div>
+      </section>
+
+      <section class="blocks">
+        <div class="block__content">
+          <figure class="block__one"></figure>
+          <article class="block__two">
+            <div>
+              <h2>Play with your friends or build your team stronger at work</h2>
+              <br />
+              <p>
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                et non inimicos, et
+              </p>
+              <br />
+              <button>Book on-site today</button>
+            </div>
+          </article>
+          <article class="block__three">
+            <div>
+              <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
+              <br />
+              <p>
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                et non inimicos, et
+              </p>
+              <br />
+              <button>Book on-site today</button>
+            </div>
+          </article>
+          <figure class="block__four"></figure>
+        </div>
+      </section>
+    </main>
+    <section>
+      <div>
+        <h1>hello hello</h1>
+      </div>
+    </section>
+    <footer class="foot">
+      <div class="foot__flex">
+        <section class="footer__text">
+          <h5>[Esc] Hacker Escape Rooms</h5>
+          <p>
+            Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant haec quoque vos
+            omnino desit illud quo solo felicitatis libertatisque perficiuntur.
+          </p>
+        </section>
+        <nav class="links">
+          <div class="site__map">
+            <h5>Site map</h5>
+            <ul>
+              <a href="#">The story</a>
+              <a href="#">Contact us</a>
+              <a href="#">Legal</a>
+              <a class="play__online" href="#">Play online</a>
+              <a href="#">Play on-site</a>
+            </ul>
+          </div>
+          <div class="social__media">
+            <h5>Follow us on</h5>
+            <ul>
+              <a href="#">Facebook</a>
+              <a href="#">Instagram</a>
+              <a href="#">Twitter</a>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
