--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
               <h2>Play with your friends or build your team stronger at work</h2>
               <br />
               <p>
-                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
-                et non inimicos, et
+                Praeterea, ex culasdasdasdapa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere
+                tibi erit, et non inimicos, et
               </p>
               <br />
               <button>Book on-site today</button>
@@ -191,18 +191,52 @@
             <div>
               <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
               <br />
+
               <p>
                 Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
                 et non inimicos, et
               </p>
               <br />
               <button>Book on-site today</button>
+
+
+              
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
           </article>
+
+
+
           <figure class="block__four"></figure>
         </div>
       </section>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <section>
       <div>
         <h1>hello hello</h1>
@@ -223,8 +257,9 @@
             <ul>
               <a href="#">The story</a>
               <a href="#">Contact us</a>
+
               <a href="#">Legal</a>
-              <a class="play__online" href="#">Play online</a>
+              <a class="play__online" href="#">Play o nline</a>
               <a href="#">Play on-site</a>
             </ul>
           </div>
@@ -232,7 +267,9 @@
             <h5>Follow us on</h5>
             <ul>
               <a href="#">Facebook</a>
+
               <a href="#">Instagram</a>
+
               <a href="#">Twitter</a>
             </ul>
           </div>
