--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         <ul class="menu">
           <li><a href="#">Play online</a></li>
           <li><a href="#">Play on-site</a></li>
+
           <li><a href="#">The story</a></li>
           <li><a href="#">Conact us</a></li>
+
+          <div><h1>hej</h1></div>
           <div class="close"></div>
         </ul>
       </nav>
